# ai-infra-content-generator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
calibration/: README.md  last-report.json
config/: aicg-org.yaml  source-registry.json  version-targets.yaml
configs/: validation-profiles.yaml
curriculum/: README.md  repository-strategy.yaml
docs/: ARCHITECTURE.md  AUTONOMOUS_ORG_AUTOMATION.md  IMPLEMENTATION_RECOMMENDATIONS.md  MIGRATION_PLAN.md  ROADMAP.md  RUNBOOK.md  agent-playbook.md  ai-infrastructure-curriculum-guide.md  architecture.md  autonomous-curriculum-pipeline.md  getting-started.md  metadata-and-automation.md  micro-learning-guide.md  migration-plan.md  remaining-work-playbook.md  renaming-workflow.md  tools-and-automation.md
exporters/: README.md
graphs/: README.md  ai-infra.graphql
manifest/: README.md  canonical_sources.json  curriculum.manifest.json  curriculum_plan.agentic-ai-developer.manifest.json  curriculum_plan.agentic-ai-engineer.manifest.json  curriculum_plan.agentic-systems-architect.manifest.json  curriculum_plan.architect.manifest.json  curriculum_plan.chief-ai-officer.manifest.json  curriculum_plan.engineer.manifest.json  curriculum_plan.index.json  curriculum_plan.junior-engineer.manifest.json  curriculum_plan.ml-platform.manifest.json  curriculum_plan.mlops.manifest.json  curriculum_plan.performance.manifest.json  curriculum_plan.principal-architect.manifest.json  curriculum_plan.principal-engineer.manifest.json  (+5 more)
memory/: .gitignore  README.md  (+2 more)
(+1122 files in other folders)
