[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-infra-content-generator"
version = "0.3.0"
description = "CLI runner for auditing, planning, generating, validating, and PR-ing AI infrastructure curriculum updates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AI Infrastructure Curriculum" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
aicg = "aicg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".venv",
  "docs/legacy",
  "memory",
  "validation/code-validators"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
